--- a/app/templates/uni_dash.html
+++ b/app/templates/uni_dash.html
@@ -32,9 +32,8 @@
                         <div class="w3-row w3-padding-16">
                         <label><b>Course Requirements</b></label><br><br>
                         <select name="requirements" class="">
-                        <option name="groupA" value="Maths, English, Kiswahili, Chemistry, 85pts">Maths, English, Kiswahili, Chemistry, 85pts</option>
-                        <option name="groupB" value="Maths, English, Physics, Geography, 80pts">Maths, English, Physics, Geography, 80pts</option>
-                        <option name="groupC" value="Maths, 2Science, History, 70pts">Maths, 2Science, History, 70pts</option>
+                        <option name="groupA" value="A">A</option>
+                        <option name="groupB" value="B">B</option>
                         </select>
                         </div>
                         <div class="w3-padding-16">
