--- a/app/templates/uni_signup.html
+++ b/app/templates/uni_signup.html
@@ -40,7 +40,7 @@
 <div class="w3-top">
     <div class="w3-row w3-black">
       <div class="w3-half s3">
-        <a href="index.html" class="w3-button w3-block w3-black"><h4>HOME</h4></a>
+        <a href="{{ url_for('index') }}" class="w3-button w3-block w3-black"><h4>HOME</h4></a>
       </div>
       <div class="w3-half s3">
         <a href="#" class="w3-button w3-block w3-black"></a>
@@ -52,7 +52,7 @@
 <body class=" w3-padding-64">
 
     <div class="content">
-        <form class="w3-padding-64 w3-center" action="/universities/new" method="POST" style="max-width:400px"> 
+        <form class="w3-padding-64 w3-center" action="" method="POST" style="max-width:400px"> 
           <p style="color: royalblue"><b>RREGISTER YOUR UNIVERSITY WITH US</b></p>
           <p><b>Note: </b>The <b style="color: red">Institution ID </b>should be the one assigned to you by CUE </p>
             <div class="w3-padding"> 
